# chessMinitel

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md  gitmodules  wiki.md
chessminitel/: Makefile  main.cpp
chessminitel/include/: Game.h  Piece.h  Plateau.h
chessminitel/include/pieces/: Cavalier.h  Dame.h  Fou.h  Pion.h  Roi.h  Tour.h
chessminitel/include/tools/: LoRa.h  Minitel.h
chessminitel/src/: Game.cpp  Minitel.cpp  Plateau.cpp
chessminitel/src/pieces/: Cavalier.cpp  Dame.cpp  Fou.cpp  Pion.cpp  Roi.cpp  Tour.cpp
chessminitel/src/tools/: LoRa.c  Minitel.cpp  utils_LoRa.c
chessminitel/tests/: testAffMinitel.cpp  testAffichage.cpp  testLoRa.c
helloword/pya/chessminitel/: main.cpp
helloword/pya/chessminitel/include/: Game.h  Minitel.h  Piece.h  Plateau.h
helloword/pya/chessminitel/include/pieces/: Cavalier.h  Fou.h  Tour.h
helloword/pya/chessminitel/include/tools/: LoRa.h
helloword/pya/chessminitel/src/: Game.cpp  Minitel.cpp  Plateau.cpp
helloword/pya/chessminitel/src/pieces/: Cavalier.cpp  Dame.cpp  Fou.cpp  Pion.cpp  Roi.cpp  Tour.cpp
helloword/pya/chessminitel/src/tools/: LoRa.c  utils_LoRa.c
helloword/pya/hello-world/: Makefile  main.c
helloword/pya/print-test-chess/: Makefile  main.cpp
helloword/pya/print-test-chess/include/: Minitel.h  Piece.h
helloword/pya/print-test-chess/include/pieces/: Dame.h  Roi.h  pieces.h
helloword/pya/print-test-chess/src/: Game.cpp  Main.cpp  Minitel.cpp  Piece.cpp  Plateau.cpp
helloword/pya/print-test-chess/src/pieces/: Cavalier.cpp  Pion.cpp
include/: Cavalier.h  Cheval.h  Dame.h  Fou.h  Game.h  LoRa.h  Piece.h  Pion.h  Plateau.h  Reine.h  Roi.h  Tour.h  utils_LoRa.h
include/pieces/: Cavalier.h  Dame.h  Fou.h  Minitel.h  Pion.h  Roi.h  Tour.h
include/tools/: CoupleList.h
src/: Game.cpp  LoRa.c  Main.cpp  Minitel.c  Piece.cpp  Plateau.cpp  utils_LoRa.c
src/pieces/: Cavalier.cpp  Dame.cpp  Fou.cpp  Pion.cpp  Roi.cpp  Tour.cpp
src/tools/: CoupleList.cpp
test/: Piece.cpp  Piece.h  test.ino
tests/: testAffichage.cpp  testLoRa.c
